// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled component test should match with the snapshot for Button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-zxi1gz-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Styled component test should match with the snapshot for Centered Container 1`] = `
<div>
  <div
    class="MuiStack-root css-1edlbwa-MuiStack-root"
  />
</div>
`;

exports[`Styled component test should match with the snapshot for FormContainer 1`] = `
<div>
  <form
    class="css-yg4hvw"
  />
</div>
`;
